--- a/run_engine_general.ipynb
+++ b/run_engine_general.ipynb
@@ -33,6 +33,9 @@
     "\n",
     "            Msg('run_func', obj, *args, **kwargs)\n",
     "\n",
+    "        The first item in *args is assumed to be the method name, subesequent args will be\n",
+    "        passed to the method as below \n",
+    "\n",
     "        where arguments are passed through to `obj.<method_name>(*args, **kwargs)`.\n",
     "        \"\"\"\n",
     "        \n",
